# show-do-milhao

./: .gitignore  .travis.yml  LICENSE  README.md  cabal.sandbox.config  questions.txt  showdomilhao.cabal  stack.yaml
src/: DataTypes.hs  Lib.hs  Main.hs  Utils.hs
