name:                showdomilhao
version:             0.1.0.0
synopsis:            A command line Show do Milhão app
description:         Please see README.md
homepage:            https://github.com/felipecsl/show-do-milhao#readme
license:             GPL
license-file:        LICENSE
author:              Felipe Lima
maintainer:          felipe.lima@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, DataTypes, Utils
  build-depends:       base >= 4.7 && < 5
                     , MissingH
                     , split
                     , text
                     , bytestring
                     , text-icu
  default-language:    Haskell2010

executable showdomilhao-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , showdomilhao
  default-language:    Haskell2010

test-suite showdomilhao-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , showdomilhao
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/felipecsl/show-do-milhao
